--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,8 @@ set(CMAKE_BUILD_TYPE Debug)
 set(GCC_COVERAGE_LINK_FLAGS "-lX11")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")
 
-set(SOURCE_FILES Source/main.cpp Source/Cartridges/CartRomOnly.cpp Source/Cartridges/Cartridge.cpp Source/Cartridges/CartMBC1.cpp)
-set(HEADER_FILES Source/Memory.hpp Source/Utilities/Types.hpp Source/Utilities/Bios.hpp Source/MemoryManager.hpp Source/Cartridges/Cartridge.hpp Source/Cartridges/CartridgeFactory.hpp Source/Utilities/AddressRange.hpp Source/Cartridges/CartRomOnly.hpp Source/Cartridges/CartMBC1.hpp Source/Utilities/AddressRange.hpp Source/Cartridges/CartMBC3.hpp Source/Cartridges/CartMBC3.cpp Source/Cartridges/RamModule.hpp Source/Cartridges/RTCModule.hpp)
+set(SOURCE_FILES Source/Main.cpp Source/Cartridges/CartRomOnly.cpp Source/Cartridges/Cartridge.cpp Source/Cartridges/CartMBC1.cpp)
+set(HEADER_FILES Source/Components/Memory.hpp Source/Utilities/Types.hpp Source/Utilities/Bios.hpp Source/Cartridges/Cartridge.hpp Source/Cartridges/CartridgeFactory.hpp Source/Utilities/AddressRange.hpp Source/Cartridges/CartRomOnly.hpp Source/Cartridges/CartMBC1.hpp Source/Utilities/AddressRange.hpp Source/Cartridges/CartMBC3.hpp Source/Cartridges/CartMBC3.cpp Source/Cartridges/RamModule.hpp Source/Cartridges/RTCModule.hpp Source/Components/Cpu.hpp Source/Components/Gpu.hpp Source/Components/Timer.hpp Source/Gameboy.hpp Source/Components/GpuMemoryInterface.hpp Source/Components/CpuMemoryInterface.hpp Source/Gameboy.cpp)
 
 
 add_executable(GBEmu ${SOURCE_FILES} ${HEADER_FILES})
