--- a/Settings.ini
+++ b/Settings.ini
@@ -1,7 +1,7 @@
 RomDir=../Roms/
 SaveDir=../Saves/
 CurrentRom=P-Red.gb
-FrameLimit=false
+FrameLimit=true
 RunBios=true
 WindowWidth=320
 WindowHeight=288
