Fixed bug where sprites above yPos 16 wouldn't draw

--- a/Settings.ini
+++ b/Settings.ini
@@ -1,7 +1,9 @@
 RomDir=../Roms/
 SaveDir=../Saves/
-CurrentRom=P-Red.gb
+CurrentRom=LoZ.gb
 FrameLimit=true
-RunBios=true
-WindowWidth=320
-WindowHeight=288
+RunBios=false
+WindowWidth=160
+WindowHeight=144
+Debug=true
+PrintCpu=false
