Added button remapping depending on Settings.ini, also moved addresses into a common area to be used by all with access to Memory.hpp

--- a/Settings.ini
+++ b/Settings.ini
@@ -3,7 +3,19 @@ SaveDir=../Saves/
 CurrentRom=P-Gold.gbc
 FrameLimit=true
 RunBios=false
-WindowWidth=640
-WindowHeight=576
+WindowWidth=320
+WindowHeight=288
 Debug=true
 PrintCpu=false
+
+[control]
+A=X
+B=Z
+Start=Space
+Select=LShift
+Left=Left
+Right=Right
+Down=Down
+Up=Up
+ToggleFramelimit=Equal
+TogglePause=Dash
