--- a/Settings.ini
+++ b/Settings.ini
@@ -3,12 +3,12 @@ SaveDir=Saves/
 CurrentRom=P-Gold.gbc
 FrameLimit=true
 RunBios=false
-WindowWidth=320
-WindowHeight=288
+WindowWidth=480
+WindowHeight=432
 Debug=true
 PrintCpu=false
 
-[control]
+[keyboard]
 A=X
 B=Z
 Start=Space
@@ -19,3 +19,15 @@ Down=Down
 Up=Up
 ToggleFramelimit=Equal
 TogglePause=Dash
+
+[controller]
+A=0
+B=2
+Start=7
+Select=6
+Left=DpadLeft
+Right=DpadRight
+Down=DpadDown
+Up=DpadUp
+ToggleFrameLimit=3
+TogglePause=5
