--- a/NewGBEmu.vcxproj.filters
+++ b/NewGBEmu.vcxproj.filters
@@ -134,6 +134,9 @@
     <ClInclude Include="Source\Utilities\Settings.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Utilities\InputInterface.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Settings.ini" />
